--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<meta name="description" content="CharityFund - Charity & Crowdfunding HTML Template" />
+<meta name="description" content="Nascency Youth Resource Initiative is an organization that has been set up primarily to add value to the youths by giving them the right orientation needed to succeed." />
 <meta name="keywords" content="building,business,construction,cleaning,transport,workshop" />
 <meta name="author" content="ThemeMascot" />
 
