--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <meta name="description" content="Nascency Youth Resource Initiative is an organization that has been set up primarily to add value to the youths by giving them the right orientation needed to succeed." />
 <meta name="keywords" content="building,business,construction,cleaning,transport,workshop" />
-<meta name="author" content="ThemeMascot" />
+<meta name="author" content="Pearlstack" />
 
 <!-- Page Title -->
 <title>Nascency</title>
